[package]
name = "golem_async"
version = "0.0.1"
edition = "2021"

[lib]
path = "src/lib.rs"
crate-type = ["cdylib"]

[profile.release]
lto = true
opt-level = 's'

[dependencies]
wit-bindgen-rt = { version = "0.26.0", features = ["bitflags"] }

golem-rust = { version = "1.1.0" }
futures-signals = "0.3.34"
futures-executor = "0.3.30"
futures-task = "0.3.30"

[package.metadata.component.target]
path = "wit"

[package.metadata.component.target.dependencies]
