[package]
name = "counter-stub"
version = "0.0.1"
edition = "2021"

[package.metadata.component]
package = "golem:component-counter"

[package.metadata.component.target]
world = "wasm-rpc-stub-counter"
path = "wit"

[package.metadata.component.target.dependencies."golem:component-counter"]
path = "wit/deps/golem_component-counter"

[package.metadata.component.target.dependencies."golem:component-runtime-loop"]
path = "wit/deps/golem_component-runtime-loop"

[package.metadata.component.target.dependencies."golem:component-runtime-loop-stub"]
path = "wit/deps/golem_component-runtime-loop-stub"

[package.metadata.component.target.dependencies."golem:rpc"]
path = "wit/deps/wasm-rpc"

[package.metadata.component.target.dependencies."wasi:io"]
path = "wit/deps/io"

[dependencies.golem-wasm-rpc]
version = "1.0.5"
features = ["stub"]
default-features = false

[dependencies.wit-bindgen-rt]
version = "0.26.0"
features = ["bitflags"]

[lib]
path = "src/lib.rs"
crate-type = ["cdylib"]
required-features = []

[profile.release]
opt-level = "s"
lto = true
strip = true
