[package]
name = "counter"
version = "0.0.1"
edition = "2021"

[dependencies]
futures-executor = "0.3.30"
futures-signals = "0.3.34"
futures-task = "0.3.30"

[dependencies.golem-rust]
version = "1.1.0"

[dependencies.wit-bindgen-rt]
version = "0.26.0"
features = ["bitflags"]

[lib]
path = "src/lib.rs"
crate-type = ["cdylib"]
required-features = []

[profile.release]
opt-level = "s"
lto = true
